// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

01/21/2010
	r128 [pakpil]
	* Fixed SC_AUTOSHADOWSPELL. bug report 54.

01/17/2010
	r117 [Jobbie]
	* Fixed Groomy, Weakness, Unlucky status regarding its calculation.
	* Fixed Weakness should not strip weapon if the player is under chemical protection.
	* An initialization of "0" to sc_def to avoid warning message in some case.

	r116 [Jobbie]
	* Fixed an issue which other client from 20091118 doesn't show cast bar.
	* Fixed the define client version in mmo.h which causes client crash when someone pm'ed you.
	* Fixed a typo on rev108 commit which causes compile errors.

01/15/2010
	r107 [LimitLine]
	* Added chance to change enemy's element to Poison with Cloud Kill.
	* Fixed Cloud Kill not dealing damage.
	* Changed Vacuum Extreme's unit ID to the correct one.
	* Changed Warmer's unit ID to the correct one.
	* Other minor changes.

	r106 [LimitLine]
	* Now spells used trough Reading Spellbooks will consume the correct amount of Preserve points (before: every skill consumed only one, regardless).
	- You can change the number of preserve points a skill takes up in db/spellbook_db.txt
	* Fixed my last changelog entries. Sorry.

	r105 [LimitLine]
	* Fixed Chain Lightning hitting allies.
	* Fixed Freezing duration trough Frost Misty.
	* Fixed Demonic Fire hitting everyone.

01/11/2010
	r100 [Jobbie]
	* Added RA_CAMOUFLAGE skill.
	* Added renewal_cast_enable setting. Read inside skill.conf about its functionality.
	* Fixed damage calculation for Firing, Icebound and Clusterbomb Trap.
	* Cleaned up unit function of Hunter and Ranger Traps.
	* Removed Freeze and Stone status in status_change_spread as its not included to the status to be spreaded.
	* Fixed items that are not updated to the recent job system.

01/09/2010
	r97 [pakpil]
	* Minor fix in my last commit. Sorry.

	r96 [pakpil]
	* Added skill SC_AUTOSHADOWSPELL.

01/08/2010
	r95 [pakpil]