@@ -6,6 +6,12 @@
 //========================================
 
 01/21/2010
+	r130 [pakpil]
+	* Fixed some mistake in SC_SHADOWFORM.
+	* Minor typo fixed.
+	* Minor fix in pc_setriding and pc_isriding.
+
+01/21/2010
 	r128 [pakpil]
 	* Fixed SC_AUTOSHADOWSPELL. bug report 54.
 
